--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -3,29 +3,9 @@
     <div class="row mb-5">
       <div class="col-lg-12">
         <div class="matching-post">
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input  mb-0" type="radio" id="Check21" name="example1" checked>
-            <label class="custom-control-label mb-0" for="Check21">SAP ABAP Lead Consultant(19) </label>
-          </div>
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input  mb-0" type="radio" id="Check22" name="example1">
-            <label class="custom-control-label  mb-0" for="Check22">SAP IBP - Integrated Business Planning  (4)</label>
-          </div>
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input  mb-0" type="radio" id="Check23" name="example1">
-            <label class="custom-control-label  mb-0" for="Check23">SAP Security Consultant (7) </label>
-          </div>
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input mb-0" type="radio" id="Check24" name="example1">
-            <label class="custom-control-label mb-0" for="Check24">SSAP Hybris Consultant - C4C (10)</label>
-          </div>
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input mb-0" type="radio" id="Check25" name="example1">
-            <label class="custom-control-label mb-0" for="Check25">SAP Sr. Consultant-ERP  (7)</label>
-          </div>
-          <div class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input class="custom-control-input mb-0" type="radio" id="Check26" name="example1">
-            <label class="custom-control-label mb-0" for="Check26">SAP SD consultant (8)</label>
+          <div *ngFor="let item of postedJobs; let i = index" class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
+            <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
+            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} {{ selectedJob?.id == item?.id ? (userMeta?.total ?  '(' + userMeta?.total + ')' :  '(' +0+ ')') : ''}} </label>
           </div>
         </div>
       </div>
@@ -70,7 +50,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-lg-7">
-                      <a href="javascript:;" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.id}">
+                      <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches', selectedJob?.id]">
                         <h5 class="text-capitalize">
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
@@ -89,7 +69,7 @@
                     </div>
                   </div>
                   <div class="media">
-                    <img [src]="item?.photo ? (item?.photo) : 'assets/images/user-img-icon.jpg'">
+                    <img [src]="item?.photo ? userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo : 'assets/images/user-img-icon.jpg'">
                     <!-- <img src="assets/images/user-img.jpg"> -->
                     <div class="media-body">
                       <h6 class="text-capitalize">
@@ -106,7 +86,7 @@
                       </h6>
                       <div class="mt-2">
                         <ng-container *ngFor="let itemSub of item?.hands_on_experience">
-                          <span *ngIf="itemSub.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub.skill_id).tag)}}</span>
+                          <span *ngIf="itemSub?.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub?.skill_id)?.tag)}}</span>
                         </ng-container>
                       </div>
                     </div>
