--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -18,34 +18,18 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="candidate-dashboard.html">
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#resumeModal">
-                      <a class="btn btn-outline-blue btn-sm" href="#">
-                      <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>+91 9876543210 / 9876543222	</h6>
-                    <h6><a href="mailto:peter-parker2010@gmail.com">jacky-smith2010@gmail.com</a> <span class="mx-2">||</span>	Austin, TX, USA</h6>
-                    <h6 class="mb-0">Tata Consultancy Services Ltd</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <app-contact-card
+            [userInfo]="userInfo"
+            [isEdit]="false"
+            [isContactIcon]="false"
+            [isResume]="true"
+            >
+            </app-contact-card>
+
           </div>
         </div>
-        <div class="row mt-2 info-box">
+        <app-shared-user-profile [userInfo]="userInfo"></app-shared-user-profile>
+        <!-- <div class="row mt-2 info-box">
           <div class="col-lg-12 mt-2">
             <h6 class="font-weight-bold">&nbsp;</h6>
           </div>
@@ -105,7 +89,7 @@
               <li class="list-group-item">Yes</li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-lg-6">
         <div class="clearfix" style="display: inline-block; float: left;">
