--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -8,6 +8,13 @@
     <div class="modal-body" style="height:550px; overflow-y:scroll;">
       <div class="row">
 				<div class="col-lg-12">
+          <!-- <app-contact-card
+            [userInfo]="userInfo"
+            [isEdit]="false"
+            [isContactIcon]="false"
+            [isResume]="true"
+            >
+            </app-contact-card> -->
 					<div class="card job-card">
 						<div class="card-body">
 							<div class="row">
@@ -29,6 +36,11 @@
 							<div class="media">
 								<img [src]="userPhotoInfo?.base64 ? convertToImage(userPhotoInfo?.base64) : 'assets/images/user-img-icon.jpg'">
 								<div class="media-body">
+                  <h6 class="text-capitalize">
+                    {{userInfo?.city ? userInfo?.city : ''}}
+                    {{userInfo?.state ? ', ' + userInfo?.state : ''}}
+                    {{userInfo?.country ? ', ' + userInfo?.country : ''}}
+                  </h6>
                   <h6>
                     <a href="mailto:{{userInfo?.email}}">
                     <i class="fas fa-envelope" *ngIf="userInfo?.email"></i> {{userInfo?.email}}</a>
