--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -17,7 +17,7 @@
       <div class="col-lg-4 mt-4" style="z-index: 1;">
         <div class="upload-box">
           <div class="box text-center upload-image">
-            <img *ngIf="defaultProfilePic" [src]="convertToImage(defaultProfilePic)" alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
+            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo" alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
                                     style="width:150px;height:150px;">
             <input [style.top]="defaultProfilePic ? '-150px' : '0px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
             <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
