--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -66,7 +66,7 @@
                     </div>
                   </div>
                   <div class="media">
-                    <img [src]="item?.photo ? (item?.photo) : 'assets/images/user-img-icon.jpg'">
+                    <img [src]="item?.photo ? (userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo) : 'assets/images/user-img-icon.jpg'">
                     <!-- <img src="assets/images/user-img.jpg"> -->
                     <div class="media-body">
                       <h6 class="text-capitalize">
