--- a/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
+++ b/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
@@ -62,7 +62,7 @@
                       <h6>{{item?.experience ? item?.experience + ' Years Exp.' : ''}} <span *ngIf="item?.type">{{' , '}}</span>{{item?.type ? sharedService.onGetJobType(item?.type) : ''}} <span *ngIf="item?.remote" class="remote pl-2">Remote</span></h6>
                       <div class="mt-2">
                         <ng-container *ngFor="let itemSub of item?.hands_on_experience">
-                          <span *ngIf="itemSub.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub.skill_id).tag)}}</span>
+                          <span *ngIf="itemSub.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub?.skill_id)?.tag)}}</span>
                         </ng-container>
                       </div>
                     </div>
