--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -55,109 +55,8 @@
             </div>
           </div>
         </div>
-        <div class="row mt-3 info-box">
-          <div class="col-lg-4 caption">
-            <ul class="list-group">
-              <li class=" list-group-item text-capitalize">{{"dashboard.totalYearsOfExp" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"dashboard.totalSapExp" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.domainExperience" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.handsOnWith" | translate }}</li>
-            </ul>
-          </div>
-          <div class="col-lg-8 info">
-            <ul class="list-group">
-              <li class="list-group-item text-capitalize">{{postedJobsDetails?.experience ? postedJobsDetails?.experience + ' Years' : ''}} </li>
-              <li class="list-group-item text-capitalize">{{postedJobsDetails?.sap_experience ? postedJobsDetails?.sap_experience + ' Years' : ''}}</li>
-              <li class="list-group-item text-capitalize">{{onFindDomainFromID(postedJobsDetails?.domain)}}</li>
-              <li class="list-group-item text-uppercase">
-                <p class="m-0 w-100 float-left" *ngFor="let item of postedJobsDetails?.hands_on_experience">
-                  <span class="text-wrap-custom float-left">{{item?.skill_id ? onFindSkillsFromSingleID(item?.skill_id)?.tag : '--'}}</span>
-                  <span *ngIf="item?.skill_id">({{item?.experience + ' ' + item?.exp_type}})</span>
-                </p>
-                <!-- {{((postedJobsDetails?.hands_on_experience, 'domain', 'tag'))}} -->
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-12 border-top pt-3">	</div>
-          <div class="col-lg-4 caption">
-            <ul class="list-group">
-              <li class=" list-group-item text-capitalize lg-mh-40">{{"dashboard.knowledgeOn" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.niceToHave" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
-            </ul>
-          </div>
-          <div class="col-lg-8 info">
-            <ul class="list-group">
-              <li class=" list-group-item text-uppercase lg-mh-40">
-                <p class="m-0 w-100 float-left" *ngFor="let item of postedJobsDetails?.skills">
-                  <span class="text-wrap-custom float-left">{{item ? onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
-                </p>
-              </li>
-              <li class=" list-group-item text-capitalize">{{onConvertArrayToString(postedJobsDetails?.programming_skills)}}  </li>
-              <li class=" list-group-item text-capitalize">{{onConvertArrayToString(postedJobsDetails?.optinal_skills)}}</li>
-              <li class=" list-group-item text-capitalize">{{onConvertArrayToString(postedJobsDetails?.certification)}}</li>
-            </ul>
-          </div>
-
-          <div class="col-lg-12 border-top pt-3">	</div>
-          <div class="col-lg-4 caption">
-            <ul class="list-group">
-              <li class=" list-group-item text-capitalize">{{"postJob.jobType" | translate}}</li>
-              <li class="list-group-item text-capitalize" *ngIf="postedJobsDetails?.type == '6'">{{"postJob.contractDuration" | translate}}</li>
-              <li class="list-group-item text-capitalize">{{"postJob.salary" | translate}}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.remote" | translate}}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.startTime" | translate}}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.travelRequired" | translate}}</li>
-              <!-- <li class=" list-group-item text-capitalize">{{"postJob.willingToRelocate" | translate}}</li> -->
-              <li class=" list-group-item text-capitalize">{{"postJob.workAuthorization" | translate }}</li>
-              <li class=" list-group-item text-capitalize">{{"postJob.visaSponsorship" | translate }}</li>
-            </ul>
-          </div>
-          <div class="col-lg-8 info">
-            <ul class="list-group">
-            <li class=" list-group-item text-capitalize">{{postedJobsDetails?.type > -1 ? sharedService.onGetJobType(postedJobsDetails?.type) : '--'}}</li>
-            <li class="list-group-item text-capitalize" *ngIf="postedJobsDetails?.type == '6'">{{postedJobsDetails?.contract_duration}} months</li>
-            <li class="list-group-item text-capitalize">
-              <ng-container *ngIf="postedJobsDetails?.salary_type == 0">
-                {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/hr'}}
-
-              </ng-container>
-              <ng-container *ngIf="postedJobsDetails?.salary_type ==1">
-                {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' Annual pay'}}
-
-              </ng-container>
-              <ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
-                --
-              </ng-container>
-            </li>
-            <li class=" list-group-item text-capitalize">{{onGetYesOrNoValue(postedJobsDetails?.remote)}}</li>
-            <li class=" list-group-item text-capitalize">
-              {{(postedJobsDetails?.availability || postedJobsDetails.availability == 0) ? (postedJobsDetails.availability == 0 ? 'Immediate' : postedJobsDetails?.availability + ' Days') : '--'}}
-            </li>
-            <li class=" list-group-item text-capitalize">
-              {{(postedJobsDetails?.travel_opportunity || postedJobsDetails?.travel_opportunity==0) ? (postedJobsDetails?.travel_opportunity == 0 ? 'No' : postedJobsDetails?.travel_opportunity + '%') : '--'}}</li>
-            <!-- <li class=" list-group-item text-capitalize">{{postedJobsDetails?.travel_opportunity ? postedJobsDetails?.travel_opportunity : '--'}}</li> -->
-            <li class=" list-group-item text-capitalize">{{postedJobsDetails?.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)}}</li>
-            <li class=" list-group-item text-capitalize">{{onGetYesOrNoValue(postedJobsDetails?.visa_sponsorship)}}</li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 caption">
-            <ul class="list-group">
-              <li *ngFor="let item of postedJobsDetails?.extra_criteria | keyvalue; let i=index"
-              class=" list-group-item text-capitalize">{{item?.value?.title ? item?.value?.title : '--'}}</li>
-             </ul>
-          </div>
-          <div class="col-lg-8 info">
-            <ul class="list-group">
-              <li *ngFor="let item of postedJobsDetails?.extra_criteria; let i=index"
-              class=" list-group-item text-capitalize">{{item?.value ? item?.value : '--'}}</li>
-            </ul>
-          </div>
-
-        </div>
+        <app-shared-job-profile [jobInfo]="postedJobsDetails" [fieldsExclude]="{salary: true}">
+        </app-shared-job-profile>
       </div>
       <div class="col-lg-4">
         <div class="title">
