--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -15,12 +15,17 @@
       <li class="list-group-item text-capitalize">{{userInfo?.experience ? userInfo?.experience + ' Years' : '--'}}</li>
       <li class="list-group-item text-capitalize">{{userInfo?.sap_experience ? userInfo?.sap_experience + ' Years': '--'}} </li>
       <li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
-      <li class="list-group-item text-uppercase">
+      <li class="list-group-item text-uppercase d-flex">
         <ng-container *ngIf="userInfo?.hands_on_experience?.length; else elseHandsTemplate">
-          <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.hands_on_experience">
+          <ng-container *ngFor="let item of userInfo?.hands_on_experience; let i = index" >
+            <div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2">
+              {{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
+            </div>
+          </ng-container>
+          <!-- <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.hands_on_experience">
             <span class="text-wrap-custom float-left">{{item?.skill_id ? sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag : '--'}}</span>
             <span *ngIf="item?.skill_id">({{item?.experience + ' ' + item?.exp_type}})</span>
-          </p>
+          </p> -->
         </ng-container>
         <ng-template #elseHandsTemplate>
           <p>--</p>
@@ -43,9 +48,15 @@
     <ul class="list-group">
       <li class="list-group-item text-uppercase lg-mh-40">
         <ng-container *ngIf="userInfo?.skills?.length; else elseSkillsTemplate">
-          <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.skills">
+          <span class="m-0 float-left" *ngFor="let item of userInfo?.skills; let i = index; let last = last;">
+            <span class="text-wrap-custom float-left"
+            *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))">
+            {{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}{{last ? '' : ',&nbsp;'}}
+            </span>
+          </span>
+          <!-- <p class="m-0 w-100 float-left" *ngFor="let item of userInfo?.skills">
             <span class="text-wrap-custom float-left">{{item ? sharedService.onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
-          </p>
+          </p> -->
         </ng-container>
         <ng-template #elseSkillsTemplate>
           <p>--</p>
