--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -105,7 +105,7 @@
     <div class="col-lg-9">
       <div class=" form-group">
         <label>{{"postYourResume.previousEmployers" | translate }}</label>
-        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label"
+        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Previous Employer" bindValue="label"
           bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="clients_worked">
         </ng-select>
