--- a/frontend/src/app/shared/component/login-form/login-form.component.html
+++ b/frontend/src/app/shared/component/login-form/login-form.component.html
@@ -2,7 +2,7 @@
 <form class="login-form"  [formGroup]="loginForm" (ngSubmit)="login()">
   <h1>Login</h1>
   <div class="form-group">
-    <label>Username</label>
+    <label>Email</label>
     <div class="input-with-icon">
       <input type="email" class="form-control" [placeholder]="'Username'" formControlName="username"/>
       <i class="fas fa-user-alt"></i>
