--- a/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
+++ b/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
@@ -5,11 +5,21 @@
       <span aria-hidden="true">&times;</span>
     </button>
     </div>
-    <div class="modal-body" style="height:550px; overflow-y:scroll;">
-    <img src="assets/images/JS-Project-Manager-Resume.jpg" class="img-fluid mx-auto"/>
+    <div class="modal-body" style="height:670px; overflow-y:scroll;">
+    <img *ngIf="!url" src="assets/images/JS-Project-Manager-Resume.jpg" class="img-fluid mx-auto"/>
+    <ngx-doc-viewer
+    *ngIf="url"
+    [url]="url"
+    [googleCheckContentLoaded]="true"
+    (loaded)="resumeLoaded($event)"
+    [googleCheckInterval]="3000"
+    viewer="google" style="width:100%;height:150vh;">
+</ngx-doc-viewer>
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-primary btn-sm" >Download Resume</button>
+    <a [href]="(url ? url : 'javascript:;')">
+      <button type="button" class="btn btn-primary btn-sm" >Download Resume</button>
+    </a>
     </div>
 </ng-template>
