--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1896,3 +1896,9 @@ a:hover {
 .lg-mh-30 { min-height: 30px!important; line-height: 16px;}
 .lg-mh-40 { min-height: 40px!important; line-height: 16px;}
 .lg-mh-50 { min-height: 50px!important; line-height: 16px;}
+
+
+.holds-the-iframe {
+  background: url(../images/loading.gif)no-repeat center top;
+}
+
