--- a/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
+++ b/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
@@ -9,8 +9,8 @@
       </div>
     </div>
     <div class="row mt-5">
-      <div *ngFor="let item of userProfileInfo?.doc_resume; let i=index" class="col-lg-2 alert fade show" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <div *ngFor="let item of userProfileInfo?.doc_resume; let i=index" class="col-lg-2 alert fade show">
+        <button (click)="onDeleteJobConfirm(item, i)" type="button" class="close">
           <span aria-hidden="true">&times;</span>
         </button>
         <!-- {{(userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file) | json}} -->
@@ -61,3 +61,13 @@
     <button type="button" (click)="onSaveResume()" class="btn btn-theme-blue " data-dismiss="modal">Save</button>
     </div>
 </ng-template>
+
+
+<app-delete-modal
+*ngIf="isDeleteModalOpened"
+[typeOfModel]="'Resume'"
+[showRecordName]="currentResumeDetails?.title"
+(onTriggerDeleteAction)="onDeleteJobConfirmed($event)"
+[toggleDeleteModal]="isDeleteModalOpened">
+
+</app-delete-modal>
