--- a/frontend/src/app/shared/component/login-form/login-form.component.html
+++ b/frontend/src/app/shared/component/login-form/login-form.component.html
@@ -4,7 +4,7 @@
   <div class="form-group">
     <label>Email</label>
     <div class="input-with-icon">
-      <input type="email" class="form-control" [placeholder]="'Username'" formControlName="username"/>
+      <input type="email" class="form-control" [placeholder]="'Email'" formControlName="username"/>
       <i class="fas fa-user-alt"></i>
     </div>
     <app-control-messages [control]="f['username']"></app-control-messages>
